--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memo",
-  "homepage": "http://local.d8-json.my/memoreact",
+  "homepage": "http://memo.coopernet.fr/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
